# create-contest-dir

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: get_request.rs  handler.rs  main.rs  parser.rs  templates.rs  utils.rs
src/handler/: templates.rs
src/utils/: fetch_files.rs  templates.rs
