[package]
name = "atcoder-create-contest-dir"
version = "0.1.0"
authors = ["SSlime-s <62363188+SSlime-s@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
