[package]
name = "atcoder-create-contest-dir"
version = "0.1.0"
authors = ["SSlime-s <62363188+SSlime-s@users.noreply.github.com>"]
edition = "2018"
description = "create cargo directory for AtCoder contests"

[[bin]]
name = "create-contest"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["cookies"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
clap = "2.33.3"
once_cell = "1.8"
rpassword = "5.0"
scraper = "0.12"
dirs = "3.0"
itertools = "0.10"
